--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,3 +9,14 @@
     font-size: 15px;
     color: white;
   }
+
+  #sideBar2 a.active {
+    color: red;
+  }
+  #sideBar2 a {
+    padding: 0px 10px;
+    font-size: 15px;
+    color: black;
+    border-radius: 2px;
+    background-color: white ;
+  }
